# Cplox

./: .gitignore  CMakeLists.txt
include/: cplox.hpp  scanner.hpp  token.hpp  tokenType.hpp
src/: CMakeLists.txt  main.cpp
src/core/: cplox.cpp  scanner.cpp  token.cpp
